TestSuite/Syntax/Errors/BarLabelMode-2.tjp
project simple "Simple Project" "$Id" 2000-01-01 2000-01-04

htmltaskreport "BarLabelMode-2.html" {
	columns name, daily, weekly, monthly
	barlabels foo
}

